--- a/ArgoOpen.ipynb
+++ b/ArgoOpen.ipynb
@@ -21,12 +21,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8e481592b604be28441a0c589578ffa",
+       "model_id": "859270f125c94343928d2426d2533066",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileChooser(path='C://Users//NikolayN//Documents//Projects//2020//Java//Argo_data', filename='', show_hidden='…"
+       "FileChooser(path='Argo_data', filename='', show_hidden='False')"
       ]
      },
      "metadata": {},
@@ -35,7 +35,7 @@
    ],
    "source": [
     "# Select Argo file\n",
-    "projDir = 'C://Users//NikolayN//Documents//Projects//2020//Java//Argo_data'\n",
+    "projDir = 'Argo_data'\n",
     "fc = FileChooser(projDir)\n",
     "display(fc)"
    ]
@@ -140,7 +140,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6956f22dc7834ad3bf989cd1934fa1c0",
+       "model_id": "0dac64e407234bd5ad9546ca1e531742",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,12 +154,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c698d4c13742404ca95fad71b4a498f2",
+       "model_id": "2d3c91f568dd4e4b8c8fe23dcfc740e1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[12.828032258064518, 127.55019354838707], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
+       "Map(center=[12.967607843137257, 127.63063725490196], controls=(ZoomControl(options=['position', 'zoom_in_text'…"
       ]
      },
      "metadata": {},
