--- a/ArgoOpen.ipynb
+++ b/ArgoOpen.ipynb
@@ -37,26 +37,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(argo_fn)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -64,7 +44,7 @@
     "# Open NetCDF Argo file\n",
     "nc_fid = Dataset(argo_fn,'r')\n",
     "vars = nc_fid.variables.keys()\n",
-    "# vars"
+    "vars"
    ]
   },
   {
