--- a/ArgoOpen.ipynb
+++ b/ArgoOpen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,30 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['DATA_TYPE', 'FORMAT_VERSION', 'HANDBOOK_VERSION', 'REFERENCE_DATE_TIME', 'DATE_CREATION', 'DATE_UPDATE', 'PLATFORM_NUMBER', 'PROJECT_NAME', 'PI_NAME', 'STATION_PARAMETERS', 'CYCLE_NUMBER', 'DIRECTION', 'DATA_CENTRE', 'DC_REFERENCE', 'DATA_STATE_INDICATOR', 'DATA_MODE', 'PLATFORM_TYPE', 'FLOAT_SERIAL_NO', 'FIRMWARE_VERSION', 'WMO_INST_TYPE', 'JULD', 'JULD_QC', 'JULD_LOCATION', 'LATITUDE', 'LONGITUDE', 'POSITION_QC', 'POSITIONING_SYSTEM', 'PROFILE_PRES_QC', 'PROFILE_TEMP_QC', 'PROFILE_PSAL_QC', 'VERTICAL_SAMPLING_SCHEME', 'CONFIG_MISSION_NUMBER', 'PRES', 'PRES_QC', 'PRES_ADJUSTED', 'PRES_ADJUSTED_QC', 'PRES_ADJUSTED_ERROR', 'TEMP', 'TEMP_QC', 'TEMP_ADJUSTED', 'TEMP_ADJUSTED_QC', 'TEMP_ADJUSTED_ERROR', 'PSAL', 'PSAL_QC', 'PSAL_ADJUSTED', 'PSAL_ADJUSTED_QC', 'PSAL_ADJUSTED_ERROR', 'PARAMETER', 'SCIENTIFIC_CALIB_EQUATION', 'SCIENTIFIC_CALIB_COEFFICIENT', 'SCIENTIFIC_CALIB_COMMENT', 'SCIENTIFIC_CALIB_DATE', 'HISTORY_INSTITUTION', 'HISTORY_STEP', 'HISTORY_SOFTWARE', 'HISTORY_SOFTWARE_RELEASE', 'HISTORY_REFERENCE', 'HISTORY_DATE', 'HISTORY_ACTION', 'HISTORY_PARAMETER', 'HISTORY_START_PRES', 'HISTORY_STOP_PRES', 'HISTORY_PREVIOUS_VALUE', 'HISTORY_QCTEST'])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Open NetCDF Argo file\n",
     "nc_fid = Dataset(argo_fn,'r')\n",
     "vars = nc_fid.variables.keys()\n",
-    "vars"
+    "# display(vars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -89,12 +78,12 @@
     "dd=date_ref.tobytes()\n",
     "dd=dd.decode('utf-8')\n",
     "ddnp = np.datetime64(dd[0:4]+'-'+dd[4:6]+'-'+dd[6:8]+'T'+dd[8:10]+':'+dd[10:12]+':'+dd[12:14])\n",
-    "print(ddnp)"
+    "# print(ddnp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,19 +103,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "masked_array(\n",
+       "  data=[[ 12.003, 130.016],\n",
+       "        [ 12.836, 130.533],\n",
+       "        [ 13.351, 131.222],\n",
+       "        [ 12.74 , 131.426],\n",
+       "        [ 12.169, 131.459],\n",
+       "        [ 11.513, 131.998],\n",
+       "        [ 11.433, 132.603],\n",
+       "        [ 11.499, 132.688],\n",
+       "        [ 11.539, 132.585],\n",
+       "        [ 11.552, 132.071],\n",
+       "        [ 11.859, 131.436],\n",
+       "        [ 11.975, 130.887],\n",
+       "        [ 12.111, 130.151],\n",
+       "        [ 12.208, 130.061],\n",
+       "        [ 11.927, 130.025],\n",
+       "        [ 12.156, 129.157],\n",
+       "        [ 12.392, 128.87 ],\n",
+       "        [ 12.33 , 128.865],\n",
+       "        [ 12.038, 128.611],\n",
+       "        [ 11.942, 128.031],\n",
+       "        [ 11.532, 127.047],\n",
+       "        [ 11.064, 126.649],\n",
+       "        [ 10.06 , 126.644],\n",
+       "        [  8.907, 126.875],\n",
+       "        [  9.705, 127.115],\n",
+       "        [  9.325, 126.828],\n",
+       "        [  9.712, 127.297],\n",
+       "        [  9.782, 127.32 ],\n",
+       "        [ 10.216, 127.806],\n",
+       "        [ 10.604, 127.654],\n",
+       "        [ 10.669, 127.129],\n",
+       "        [ 10.581, 127.025],\n",
+       "        [ 10.85 , 127.02 ],\n",
+       "        [ 11.   , 126.811],\n",
+       "        [ 10.39 , 126.569],\n",
+       "        [  9.861, 127.09 ],\n",
+       "        [ 11.085, 127.278],\n",
+       "        [ 10.473, 126.504],\n",
+       "        [ 10.18 , 126.703],\n",
+       "        [ 11.067, 126.18 ],\n",
+       "        [ 11.37 , 125.871],\n",
+       "        [ 11.784, 125.815],\n",
+       "        [ 12.403, 125.917],\n",
+       "        [ 13.511, 126.433],\n",
+       "        [ 14.456, 126.344],\n",
+       "        [ 14.682, 126.732],\n",
+       "        [ 13.83 , 126.69 ],\n",
+       "        [ 12.997, 126.392],\n",
+       "        [ 12.319, 126.233],\n",
+       "        [ 11.94 , 126.572],\n",
+       "        [ 12.464, 126.483],\n",
+       "        [ 13.353, 126.295],\n",
+       "        [ 13.928, 126.316],\n",
+       "        [ 13.446, 126.29 ],\n",
+       "        [ 12.987, 126.357],\n",
+       "        [ 13.073, 126.84 ],\n",
+       "        [ 13.761, 127.433],\n",
+       "        [ 14.526, 127.657],\n",
+       "        [ 14.7  , 127.891],\n",
+       "        [ 14.471, 128.062],\n",
+       "        [ 14.057, 128.172],\n",
+       "        [ 14.41 , 128.199],\n",
+       "        [ 14.962, 127.367],\n",
+       "        [ 15.04 , 127.   ],\n",
+       "        [ 14.809, 126.965],\n",
+       "        [ 15.225, 126.524],\n",
+       "        [ 16.241, 126.609],\n",
+       "        [ 15.858, 127.255],\n",
+       "        [ 15.159, 126.869],\n",
+       "        [ 14.832, 126.671],\n",
+       "        [ 15.405, 125.663],\n",
+       "        [ 15.447, 125.641],\n",
+       "        [ 15.148, 125.715],\n",
+       "        [ 14.972, 124.919],\n",
+       "        [ 15.331, 123.982],\n",
+       "        [ 16.052, 123.923],\n",
+       "        [ 15.384, 124.593],\n",
+       "        [ 15.173, 124.076],\n",
+       "        [ 14.806, 124.664],\n",
+       "        [ 14.371, 125.282],\n",
+       "        [ 14.584, 125.866],\n",
+       "        [ 14.92 , 126.154],\n",
+       "        [ 14.385, 126.41 ],\n",
+       "        [ 13.882, 127.389],\n",
+       "        [ 13.824, 126.913],\n",
+       "        [ 13.742, 126.53 ],\n",
+       "        [ 13.567, 126.851],\n",
+       "        [ 13.23 , 127.571],\n",
+       "        [ 12.538, 128.332],\n",
+       "        [ 12.006, 128.817],\n",
+       "        [ 12.22 , 128.944],\n",
+       "        [ 12.936, 128.844],\n",
+       "        [ 13.854, 128.596],\n",
+       "        [ 14.457, 128.196],\n",
+       "        [ 14.723, 127.98 ],\n",
+       "        [ 14.849, 127.933],\n",
+       "        [ 14.818, 128.018],\n",
+       "        [ 14.716, 128.147],\n",
+       "        [ 14.518, 128.428],\n",
+       "        [ 14.152, 128.785],\n",
+       "        [ 13.824, 129.141],\n",
+       "        [ 13.632, 129.529]],\n",
+       "  mask=False,\n",
+       "  fill_value=1e+20)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "latitude = lat.reshape(nProf,1)\n",
     "longitude = lon.reshape(nProf,1)\n",
     "coords = ma.concatenate([latitude, longitude],axis=1)\n",
-    "# coords"
+    "display(coords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,13 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a78f33a2c058401794c3c4bf1e78c90a",
+       "model_id": "ecacf35fa76e4b0d8e76aaf5b203879d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f1ad6d9d99e4d79bab038650a1b06db",
+       "model_id": "c3bfb77ffc7941ad838f33059f33a3a5",
        "version_major": 2,
        "version_minor": 0
       },
