--- a/ArgoOpen.ipynb
+++ b/ArgoOpen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,17 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1950-01-01T00:00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Reference datetime\n",
     "dd=date_ref.tobytes()\n",
@@ -83,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -224,12 +216,12 @@
     "latitude = lat.reshape(nProf,1)\n",
     "longitude = lon.reshape(nProf,1)\n",
     "coords = ma.concatenate([latitude, longitude],axis=1)\n",
-    "display(coords)"
+    "# display(coords)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,13 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecacf35fa76e4b0d8e76aaf5b203879d",
+       "model_id": "996a286bd3f94c1884c2d437ec50cdd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c3bfb77ffc7941ad838f33059f33a3a5",
+       "model_id": "eb3fd95f232c4be59bb82c77fd5a5e42",
        "version_major": 2,
        "version_minor": 0
       },
@@ -299,7 +291,7 @@
     "m.layout.width = '100%'\n",
     "m.layout.height = '500px'\n",
     "m.on_interaction(handle_interaction)\n",
-    "m"
+    "display(m)"
    ]
   },
   {
