--- a/ArgoOpen.ipynb
+++ b/ArgoOpen.ipynb
@@ -121,27 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ffe5f57b1ee4c5bbb4db024e9397dd6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Label(value='')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfec8db304d8417d877b90f89ac92e69",
+       "model_id": "6bd48f20475a4fc0b4822653c690b26b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,7 +142,7 @@
    "source": [
     "from ipywidgets import Label\n",
     "label = Label()\n",
-    "display(label)\n",
+    "# display(label)\n",
     "def handle_interaction(**kwargs):\n",
     "    if kwargs.get('type') == 'mousemove':\n",
     "        m_coords = kwargs.get('coordinates')\n",
