--- a/ArgoOpen.ipynb
+++ b/ArgoOpen.ipynb
@@ -121,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6bd48f20475a4fc0b4822653c690b26b",
+       "model_id": "086dd9d87a814d8d85eee1c0a54b0ecb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -162,7 +162,7 @@
     "    m.add_layer(marker)\n",
     "m.layout.width = '100%'\n",
     "m.layout.height = '500px'\n",
-    "m.on_interaction(handle_interaction)\n",
+    "# m.on_interaction(handle_interaction)\n",
     "display(m)"
    ]
   },
